Add default root logging level of info