@@ -1,24 +1,25 @@
 package com.laa.nolasa.laanolasa.util;
 
 import lombok.extern.slf4j.Slf4j;
+import org.slf4j.ILoggerFactory;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Component;
 
 import javax.annotation.PostConstruct;
-import java.util.Arrays;
 import java.util.List;
-
 
 @Component
 @Slf4j
 public class PostConstructLogger {
 
     @Autowired
-    private Environment env;
+    private Environment environment;
 
-    private static final List<String> PROPS = Arrays.asList(
+    private static final List<String> ENVIRONMENT_PROPERTY_KEYS = List.of(
             "APP_CRON_STRING",
+            "APP_DRY_RUN_MODE",
             "LIBRA_ENDPOINTURI",
             "DATASOURCE_USERNAME",
             "DATASOURCE_URL",
@@ -33,15 +34,23 @@ public class PostConstructLogger {
             "debug",
             "client.default-uri");
 
-
     @PostConstruct
     public void init() {
-
         log.info("====== Environment and configuration ======");
-
-        PROPS.stream()
-                .forEach(prop -> log.info("{}: {}", prop, env.getProperty(prop)));
-
+        logEnvironmentProperties();
+        logSlf4jLoggingImplementation();
         log.info("===========================================");
+    }
+
+    private static void logSlf4jLoggingImplementation() {
+        ILoggerFactory loggerFactory = LoggerFactory.getILoggerFactory();
+
+        log.info("SLF4J is using the underlying logging implementation: {}", loggerFactory.getClass().getName());
+        log.info("SLF4J is using the underlying logging implementation: {}", log.getClass().getName());
+    }
+
+    private void logEnvironmentProperties() {
+        ENVIRONMENT_PROPERTY_KEYS
+                .forEach(propertyKey -> log.info("{}: {}", propertyKey, environment.getProperty(propertyKey)));
     }
 }
